myteo/test/parser/ast/if/unparenthesized_test_error.exp
Error: Unexpected token "test", expected "("
test/parser/ast/if/unparenthesized_test_error.myte:4:5
 4 |   if test {}
   |      ^^^^