myteo/test/parser/ast/if/unparenthesized_test_error.myte
module Test

fun main() {
  if test {}
}